# ric-script

./: .clang-format  .clang-format-ignore  .clang-format-include  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  ast.c  ast.h  eval.c  eval.h  gram.y  hashtable.c  hashtable.h  hooks.c  hooks.h  lex.l  lex.yy.c  lib.c  lib.h  listFiles.ric  main.c  meson.build  meson_options.txt  requirements.txt  ric.sublime-syntax  ricscript.sublime-syntax  test.ric  testInterpret.ric  y.tab.c  y.tab.h
.github/workflows/: cpplint.yml  docker-build.yml  gcd-sample-test.yml  google.yml  tests.yml  valgrind.yml
doc/sphinx/: Makefile  Readme.md  Readme.txt  requirements.txt
doc/sphinx/buildRootMod/doctrees/: docker.doctree  dyn-lib.doctree  environment.pickle  index.doctree  installation.doctree  standardlibrary.doctree  syntaxwalkthrough.doctree
doc/sphinx/buildRootMod/html/: .buildinfo  docker.html  dyn-lib.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  standardlibrary.html  syntaxwalkthrough.html  whatisthis.html
doc/sphinx/buildRootMod/html/_sources/: index.rst.txt  installation.rst.txt  standardlibrary.rst.txt  syntaxwalkthrough.rst.txt
doc/sphinx/source/: addHrefPrefix.py  conf.py  docker.rst  dyn-lib.rst  index.rst  installation.rst  standardlibrary.rst  style.css  syntaxwalkthrough.rst
node/: app-backup.js  app.js  index.html  package-lock.json  package.json  ric.js
node/files/: README
node/public/js/: jquery.terminal.min.js
samples/: args.ric  bigIntegers.ric  class.ric  conditional.ric  data_print.ric  demo.ric  dictionary.ric  example.ric  find_files.ric  foobar.ric  forEaching.ric  forever_and_ever.ric  func_ptr.ric  funccall_as_expr.ric  function_within_function.ric  gcd.ric  json.ric  listFiles.ric  load.ric  load_nt.ric  locals_globals.ric  math.ric  ramanujan_three.ric  recursion.ric  ric_lib.ric  rpn.ric  rpn_classes.ric  socket.ric  socketClient.ric  socketClientServer.ric  socketServer.ric  string_manipulations.ric  threads.ric  threads_test.ric  types.ric  vector_print.ric  xattr.ric
samples/folder/: README.md
samples/load_test/: definitions.ric  numbers.txt
src/: .gram.y.swp  Makefile  ast.c  ast.h  dl.c  dl.h  dl_nt.c  eval.c  eval.h  garbage.c  garbage.h  gram.y  hashtable.c  hashtable.h  hooks.c  hooks.h  interpret.c  interpret.h  lex.l  lex.yy.c  lib.c  lib.h  main.c  meson.build  print.c  print.h  prioqueue.c  prioqueue.h  stdin.c  stdin_nt.c  sync.c  sync.h  sync_nt.c  untitled  y.tab.c  y.tab.h
src/ric.dSYM/Contents/: Info.plist
src/sdk_lib/: README.md  ext_lib.c  ext_lib.h  ext_lib_example.ric  meson.build  ric_modules.txt
src/sdk_lib/tests/: ric_modules.txt  settings.py  test_ext_lib.py
sublime/: ricscript.sublime-syntax
tests/: Makefile  README.md  requirements.txt  settings.py  test.txt  test_args.py  test_big_int.py  test_class.py  test_conditional.py  test_crypto.py  test_data_print.py  test_dict_print.py  test_find_files.py  test_for_eaching.py  test_func_ptr.py  test_json.py  test_list_dir.py  test_load.py  test_locals_globals.py  test_math.py  test_ric_lib.py  test_sample_function_within_function.py  test_sample_gcd.py  test_string_manipulations.py  test_threading.py  test_time_of_day.py  test_types.py  test_vector_print.py  test_xattr.py
vim/: README.md
vim/ftdetect/: ric.vim
vim/syntax/: ric.vim
